--- a/Lab2/src/main/resources/templates/addLibraryUser.html
+++ b/Lab2/src/main/resources/templates/addLibraryUser.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <form action="#" th:action="@{/users/add}" method="post" th:object="${user}">
-    <input th:field = "*{fullName}" placeholder="Введите фамилию" class="form-control col-10" required><br>
-    <input th:field = "*{age}"  placeholder="Введите имя" class="form-control col-2"required><br>
-    <input th:field = "*{address}"  placeholder="Введите отчество" class="form-control  col-4" required><br>
+    <input th:field = "*{fullName}" placeholder="Введите ФИО" class="form-control col-10" required><br>
+    <input th:field = "*{age}"  placeholder="Введите возраст" class="form-control col-2"required><br>
+    <input th:field = "*{address}"  placeholder="Введите адрес" class="form-control  col-4" required><br>
     <input th:field = "*{phoneNumber}"  placeholder="8**********" class="form-control  col-4" pattern="[8]{1}[0-9]{10}" required><br>
     <button type="submit">Добавить</button>
 </form>
